--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_HELLO_WORLD_LABENEKO_202206 }}'
-          projectId: hello-world-labeneko-202206
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NYOBI_CONTEST2022 }}'
+          projectId: nyobi-contest2022
